syntax = "proto3";

package code;
option java_package = "cn.edu.seu.protocol.standard";
option java_outer_classname = "RpcHeader";

enum CompressType {
    COMPRESS_NO = 0;
    COMPRESS_SNAPPY =1;
    COMPERESS_GZIP = 2;
}

enum RespCode {
    RESP_SUCCESS = 0;
    RESP_FAIL = 1;
}

// 请求Header
message RequestHeader {
    string service_name = 1; // 服务名或接口名
    string method_name = 2; // 方法名
    uint64 request_id = 3; // 请求id
    CompressType compress_type = 4; // body消息压缩类型，0：不压缩，1：SNAPPY压缩，2：GZIP压缩
    map<string, string> custom_param = 5; // 用户自定义参数
}

// 响应Header
message ResponseHeader {
    uint64 request_id = 1; // 请求Id
    RespCode res_code = 2; // 返回码，0：成功，1：失败
    string res_msg = 3; // 返回失败时的错误消息
}